--- a/XFramework.Site.Home/Language/en.xml
+++ b/XFramework.Site.Home/Language/en.xml
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <root>
-    <item key="product-category-root-id">9</item>
-    <item key="site-top-logo-link-text"><![CDATA[<a href="/" title="机械发展科技股份有限公司--创新、优质、用户满意"><img src="/images/top_bar_en.jpg" alt="机械发展科技股份有限公司--创新、优质、用户满意" /></a>]]></item>
+    <item key="product-category-root-id">12</item>
+    <item key="site-top-logo-link-text"><![CDATA[<a href="/" title="Hebei jiu rong trade co.,LTD"><img src="/images/banner_en.jpg" alt="Hebei jiu rong trade co.,LTD" /></a>]]></item>
     <item key="current-text">Current</item>
     <item key="channel-sub-nav-home-text">Home</item>
     <item key="article-publish-date-text">Publish Date</item>
+    <item key="empty">No data</item>
     <item key="more-text">More</item>
+    <item key="view-count">Views</item>
     <item key="site-top-nav-text">
-        <![CDATA[<a href="#">Set as Homepage</a> | <a href="javascript:void(0);" onclick="bookmark('机科发展科技股份有限公司','http://www.mtd.com.cn');return false;">Add to Favorite</a> | <a href="http://www.mtd.com.cn/">中文版</a>]]>
+        <![CDATA[<a href="javascript:void(0);" onclick="bookmark('Hebei jiu rong trade co.,LTD','http://www.hbjiurong.com');return false;">Add to Favorite</a> | <a href="/">中文版</a>]]>
     </item>
     <item key="footer-text">
-        <![CDATA[<p class="footer_logo"><img src="/images/logo.jpg" /></p><p class="footer_info">Copyright © 1999-2012, MTD, All Rights Reserved<br />Address：NO.2 South ShouTi Road, HaiDian District, Beijing<br />备案号：京ICP备09075358号</p><p class="copright_map"><a href="copyright.html">Privacy Statement</a> | <a href="Sitemap.html">Sitemap</a> | <a href="contact.html">Contact MTD</a> | <a href="#">Count</a></p>]]>
+        <![CDATA[
+        <!--<div class="link"><a href="/channel/92.html">Privacy Statement</a> | <a href="/channel/93.html">Sitemap</a> | <a href="/channel/9.html">Contact</a></div>-->
+        <div class="copyright">Copyright &copy; 2015 &nbsp;冀ICP备15005389号</div>]]>
     </item>
     <item key="footer-friendlink-text">
     </item>
